added policy to definition of agreement

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -19,8 +19,8 @@ terms:
     glossary: to take the responsibility for something.
   agreement:
     name: Agreement
-    definition: An **agreement** is an agreed upon guideline, process or protocol designed to guide the flow of value.
-    glossary: An agreed upon guideline, process or protocol designed to guide the flow of value.
+    definition: An **agreement** is an agreed upon guideline, process, protocol or policy designed to guide the flow of value.
+    glossary: An agreed upon guideline, process, protocol or policy designed to guide the flow of value.
   alignment:
     name: Alignment
     glossary: The process of bringing the actions of all parts of an organization in line with the organization's objectives.
