fixed markup in glossary

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -143,7 +143,7 @@ terms:
   objection:
     name: Objection
     definition: An **objection** is a reason why doing something stands in the way of (more) effective response to an organizational driver (i.e. an organizational requirement).
-    glossary: A _reason_ — relating to a proposal, decision, existing agreement or action — that reveals unintended consequences, or viable ways to improve.
+    glossary: A reason — relating to a proposal, decision, existing agreement or action — that reveals unintended consequences, or viable ways to improve.
   peer-domain:
     name: Peer Domain
     definition:
