amended definition of objection again

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -142,8 +142,8 @@ terms:
     glossary: A visible list of (typically prioritized) uncompleted work items (deliverables).
   objection:
     name: Objection
-    definition: An **objection** is an argument demonstrating how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
-    glossary: An argument demonstrating how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
+    definition: An **objection** is an argument demonstrating (or revealing)how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
+    glossary: An argument demonstrating (or revealing) how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
   peer-domain:
     name: Peer Domain
     definition:
