hide text for accountability in supporter edition for now

--- a/content/structure.yaml
+++ b/content/structure.yaml
@@ -20,6 +20,8 @@ content:
         slug: patterns
       - title: Principles
         slug: principles
+      - title: Principle of Accountability
+        slug: principle-accountability
       - title: Making Sense of Organizations
         slug: making-sense-of-organizations
       - title: Driver
