--- a/templates/docs/_config.yml
+++ b/templates/docs/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
    ${_("The official description of Sociocracy 3.0 - All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David.")}
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://s3-working-group.github.io" # the base hostname & protocol for your site
+url: "${site_url}" # the base hostname & protocol for your site
 
 twitter_username: sociocracy30
 
