--- a/templates/docs/_config.yml
+++ b/templates/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ${_("Sociocracy 3.0 - A Practical Guide")}
+title: ${_("A Practical Guide to Sociocracy 3.0")}
 email: bernhard.bockelbrink@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
    ${_("The official description of Sociocracy 3.0 - All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David.")}
