--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -67,6 +67,7 @@ terms:
     glossary: An individual or group accepting responsibility for a domain delegated to them.
   delegation:
     name: Delegation
+    definition: Delegation is the grant of authority over a domain by one party to another.
     glossary: The grant of authority by one party (the delegator) to another (the delegatee) to account for a domain, (i.e. to do certain things and/or to make certain decisions) for which the delegator maintains overall accountability.
   delegator:
     name: Delegator
