--- a/content/structure.yaml
+++ b/content/structure.yaml
@@ -14,25 +14,25 @@ content:
         slug: history
       - title: Why Sociocracy 3.0?
         slug: why-s3
-      - title: Basic Concepts
-        slug: basic-concepts
+      - title: Patterns and the Seven Principles
+        slug: patterns-and-principles
       - title: Patterns
         slug: patterns
       - title: Principles
         slug: principles
       - title: Principle of Accountability
         slug: principle-accountability
-      - title: Making Sense of Organizations
+      - title: Key Concepts for Making Sense of Organizations
         slug: making-sense-of-organizations
-      - title: Driver
+      - title: Drivers
         slug: driver
-      - title: Domain
+      - title: Domains
         slug: domain
-      - title: Objection
+      - title: Objections
         slug: objection
-      - title: Agreement
+      - title: Agreements
         slug: agreement      
-      - title: Governance
+      - title: Governances
         slug: governance  
 
   chapters:
