updated definition of objection

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -131,8 +131,8 @@ terms:
     glossary: The lack of something wanted or deemed necessary (a requirement).
   objection:
     name: Objection
-    definition: An **objection** is an argument demonstrating (or revealing) how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
-    glossary: An argument demonstrating (or revealing) how a (proposed) agreement or activity can lead to unintended consequences, or that there are worthwhile ways to improve it.
+    definition: An **objection** is an argument relating to a (proposed) agreement or activity that reveals unintended consequences you’d rather avoid, or that demonstrates worthwhile ways to improve.
+    glossary: An argument relating to a (proposed) agreement or activity that reveals unintended consequences you’d rather avoid, or that demonstrates worthwhile ways to improve.
   objective:
     name: Objective
     definition:
