fixed typo in glossary

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -125,7 +125,7 @@ terms:
     name: Logbook
     definition:
     glossary: A (digital) system to store all information relevant for running an organization. 
-  metrci:
+  metric:
     name: Metric
     definition: A **metric** is a quantifiable measure used to track and assess progress, evaluate outcomes and determine success.
     glossary: A quantifiable measure used to track and assess progress, evaluate outcomes and determine success
