renamed “why sociocracy 3.0” to why “3.0”

--- a/content/structure.yaml
+++ b/content/structure.yaml
@@ -13,7 +13,7 @@ content:
       - title: History
         slug: history
       - title: Why Sociocracy 3.0?
-        slug: why-s3
+        slug: why-30
       - title: Patterns and the Seven Principles
         slug: patterns-and-principles
       - title: Patterns
