--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -104,7 +104,7 @@ terms:
     glossary: Deliverables traveling through an organization towards customers or other stakeholders.
   governance:
     name: Governance
-    definition: **Governance** in an organization (or a domain within it) is the process of setting objectives and making and evolving decisions that guide people towards achieving those objectives.
+    definition: "**Governance** in an organization (or a domain within it) is the process of setting objectives and making and evolving decisions that guide people towards achieving those objectives."
     glossary: The process of setting objectives and making and evolving decisions that guide people towards achieving those objectives.
   governance-backlog:
     name: Governance Backlog
