added page for pattern index

--- a/content/structure-new.yaml
+++ b/content/structure-new.yaml
@@ -204,6 +204,7 @@ parts:
   - id: appendix
     chapters:
       - changelog
+      - pattern-index
       - links
       - license
       - disclaimer
