--- a/config/project-new.yaml
+++ b/config/project-new.yaml
@@ -20,14 +20,15 @@ defaults:
   # TODO: update the make conf file from translations
   # target::Target file (for reveal.js and deckset) or folder (for wordpress or jekyll).
   target: "" 
-  # footer: The footer to add to each group (wordpress output)
-  footer: ""
   # template: The template to use (deckset, revealjs, and jekyll output)
   template: ""
+  # the target format (html, markdown, latex)
+  target_format: ""
 
 presets:
   jekyll:
     renderer: jekyll
+    target_format: html
     variables:
       # Language and text direction for Jekyll site
       html_language: "en"
@@ -68,16 +69,15 @@ presets:
         destination: docs/404.md
         mode: copy
 
-    # TODO: build the single page version
+  single-jekyll-page:
+    renderer: ebook
+    template: templates/single-page--master.md
+    target: docs/all-new.md
     # - source: templates/single-page--master.md tmp/ebook/single-page--master.md
-    # render intro, chapters and appendix to separate md files
-    # mdslides build ebook $(CONFIG) $(SOURCE) tmp/ebook/ --glossary=$(GLOSSARY)
-    # transclude all to one file 
-    # cd tmp/ebook; multimarkdown --to=mmd --output=../../docs/all.md single-page--master.md
 
   epub:
     target: tmp/ebook/
-
+    target_format: html
     templates:     # prepare and copy template
       - source: templates/epub--master.md 
         destination: tmp/ebook/epub--master.md
@@ -117,6 +117,7 @@ presets:
 
   ebook:
     renderer: ebook
+    target_format: latex
     # render intro, chapters and appendix to separate md files (but without sectionprefix!)
     # mdslides build ebook $(CONFIG) $(SOURCE) tmp/ebook/ --glossary=$(GLOSSARY) --no-section-prefix
     target: tmp/ebook/
